# boilerplate

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/dependencies/: pagination_params.py  team.py
app/api/routes/: api.py  auth_controller.py  teams_controller.py
app/config/: config.py
app/db/: uow.py
app/db/migrations/: env.py
app/db/migrations/versions/: 58fbc07b4fe7_first.py
app/db/repositories/: base_repository.py  team_repository.py
app/models/: common.py
app/models/entities/: __init__.py  base.py  team.py
app/models/schemas/: access_token.py  team.py
app/models/schemas/common/: paginated.py  sort.py
app/services/: auth_service.py  team_services.py
app/services/dependencies/: get_db.py
app/services/dependencies/auth/: auth_bearer.py  auth_handler.py
scripts/: wait-for-db.sh
tests/: conftest.py  fake_uow.py
tests/test_api/test_errors/: test_404.py
tests/test_api/test_routes/: test_auth.py  test_teams.py
tests/test_models/test_entities/: test_base.py
tests/test_repositories/: test_team_repository.py
tests/test_services/: test_auth_service.py  test_team_services.py
tests/test_services/test_dependencies/: test_auth_bearer.py  test_auth_handler.py
